unpackaged/main/default/objects/Enrollment_Implementation__c/Enrollment_Implementation__c.object-meta.xml
<CustomObject>
    <description>Enrollment services implementations</description>
    <label>Enrollment Implementation</label>
    <nameField>
        <displayFormat>EI-{0000}</displayFormat>
        <label>Enrollment Implementation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Implementations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>