unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Accident_Type__c.field-meta.xml
<CustomField>
    <fullName>Accident_Type__c</fullName>
    <label>Accident Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accident Elite</fullName>
            </value>
            <value>
                <fullName>DUO</fullName>
            </value>
            <value>
                <fullName>W2G Accident 24 Hour</fullName>
            </value>
            <value>
                <fullName>W2G Accident Off The Job</fullName>
            </value>
            <value>
                <fullName>W2G</fullName>
                <isActive>false</isActive>
                <label>W2G</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>