unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Actual_Payroll_Load_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Payroll_Load_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Payroll Load Date</label>
    <type>Date</type>
</CustomField>