unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Additional_Broker_Contact__c.field-meta.xml
<CustomField>
    <fullName>Additional_Broker_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Broker Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enrollment Implementations (Additional Broker Contact)</relationshipLabel>
    <relationshipName>Enrollment_Implementations4</relationshipName>
    <type>Lookup</type>
</CustomField>