unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Additional_Broker_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_Broker_Contact_Email__c</fullName>
    <formula>Additional_Broker_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Broker Contact Email</label>
    <type>Text</type>
</CustomField>