unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Additional_Broker_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Additional_Broker_Contact_Fax__c</fullName>
    <formula>Additional_Broker_Contact__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Broker Contact Fax</label>
    <type>Text</type>
</CustomField>