unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Additional_Broker_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Additional_Broker_Contact_Phone__c</fullName>
    <formula>Additional_Broker_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Broker Contact Phone</label>
    <type>Text</type>
</CustomField>