unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Additional_Broker_Title__c.field-meta.xml
<CustomField>
    <fullName>Additional_Broker_Title__c</fullName>
    <formula>Additional_Broker_Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Broker Title</label>
    <type>Text</type>
</CustomField>