unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Additional_Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used for any contact you want documented</inlineHelpText>
    <label>Additional Contact 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enrollment Implementations (Additional Contact 1)</relationshipLabel>
    <relationshipName>Enrollment_Implementations8</relationshipName>
    <type>Lookup</type>
</CustomField>