unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Additional_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Can be used for any type of contact you wish to track</inlineHelpText>
    <label>Additional Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enrollment Implementations (Additional Contact 2)</relationshipLabel>
    <relationshipName>Enrollment_Implementations9</relationshipName>
    <type>Lookup</type>
</CustomField>