unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Additional_Contact_2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_2_Phone__c</fullName>
    <formula>Additional_Contact_2__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Contact 2 Phone</label>
    <type>Text</type>
</CustomField>