unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Additional_Contact_3__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Contact 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enrollment Implementations (Additional Contact 3)</relationshipLabel>
    <relationshipName>Enrollment_ImplementationsXfAC</relationshipName>
    <type>Lookup</type>
</CustomField>