unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Additional_Contact_3_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_3_Email__c</fullName>
    <formula>Additional_Contact_3__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Contact 3 Email</label>
    <type>Text</type>
</CustomField>