unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Additional_Contact_3_Fax__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_3_Fax__c</fullName>
    <formula>Additional_Contact_3__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Contact 3 Fax</label>
    <type>Text</type>
</CustomField>