unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Additional_Contact_3_Title__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_3_Title__c</fullName>
    <formula>Additional_Contact_3__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Contact 3 Title</label>
    <type>Text</type>
</CustomField>