unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Additional_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contacts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Contacts</label>
    <length>250</length>
    <type>Text</type>
</CustomField>