unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Additional_Contacts_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contacts_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Contacts Notes</label>
    <length>250</length>
    <type>Text</type>
</CustomField>