unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Additional_Peer_Reviewers__c.field-meta.xml
<CustomField>
    <fullName>Additional_Peer_Reviewers__c</fullName>
    <description>List any additional Peer Reviewers</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Peer Reviewers</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>