unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Agency_Region__c.field-meta.xml
<CustomField>
    <fullName>Agency_Region__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>