unpackaged/main/default/objects/Enrollment_Implementation__c/fields/All_Case_Information_Received__c.field-meta.xml
<CustomField>
    <fullName>All_Case_Information_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Case Information Received</label>
    <type>Checkbox</type>
</CustomField>