unpackaged/main/default/objects/Enrollment_Implementation__c/fields/All_Case_Information_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>All_Case_Information_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>All Case Information Received Date</label>
    <type>Date</type>
</CustomField>