unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Application_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Received Date</label>
    <type>Date</type>
</CustomField>