unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Applications__c.field-meta.xml
<CustomField>
    <fullName>Applications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applications</label>
    <type>Checkbox</type>
</CustomField>