unpackaged/main/default/objects/Enrollment_Implementation__c/fields/BenTec__c.field-meta.xml
<CustomField>
    <fullName>BenTec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BenTec</label>
    <type>Checkbox</type>
</CustomField>