unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Bill_Groups_Info__c.field-meta.xml
<CustomField>
    <fullName>Bill_Groups_Info__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Payroll groups name, ded frequency, ded codes, ded instructions</inlineHelpText>
    <label>Bill Groups Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>