unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Bill_Method__c.field-meta.xml
<CustomField>
    <fullName>Bill_Method__c</fullName>
    <label>Bill Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>