unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Bill_Mode__c.field-meta.xml
<CustomField>
    <fullName>Bill_Mode__c</fullName>
    <label>Bill Mode</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Tenthly</fullName>
            </value>
            <value>
                <fullName>Ninethly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>