unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Billed_By__c.field-meta.xml
<CustomField>
    <fullName>Billed_By__c</fullName>
    <label>Billed By</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>USAble</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>