unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Billing_Time__c.field-meta.xml
<CustomField>
    <fullName>Billing_Time__c</fullName>
    <label>Billing Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advance</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>