unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Bio_Description__c.field-meta.xml
<CustomField>
    <fullName>Bio_Description__c</fullName>
    <description>Bio/description of group for enrollers</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Bio/Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>