unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Blue_Cross_Manager__c.field-meta.xml
<CustomField>
    <fullName>Blue_Cross_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Blue Cross Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enrollment Implementations (Blue Cross Manager)</relationshipLabel>
    <relationshipName>Enrollment_Implementations1</relationshipName>
    <type>Lookup</type>
</CustomField>