unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Blue_Cross_Rep__c.field-meta.xml
<CustomField>
    <fullName>Blue_Cross_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Blue Cross Rep</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enrollment Implementations</relationshipLabel>
    <relationshipName>Enrollment_Implementations</relationshipName>
    <type>Lookup</type>
</CustomField>