unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broker</label>
    <type>Checkbox</type>
</CustomField>