unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Broker_Agency__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agency__c</fullName>
    <formula>Broker_Agent_Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Agency</label>
    <type>Text</type>
</CustomField>