unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Broker_Agent_Contact__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agent_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker/Agent Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Contact_Type__c</field>
            <operation>equals</operation>
            <value>Agent, Other Service Provider, Enrollment Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enrollment Implementations (Broker/Agent Contact)</relationshipLabel>
    <relationshipName>Enrollment_Implementations5</relationshipName>
    <type>Lookup</type>
</CustomField>