unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Broker_Agent_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agent_Contact_Email__c</fullName>
    <formula>Broker_Agent_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker/Agent Contact Email</label>
    <type>Text</type>
</CustomField>