unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Broker_Agent_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agent_Contact_Phone__c</fullName>
    <formula>Broker_Agent_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker/Agent Contact Phone</label>
    <type>Text</type>
</CustomField>