unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Broker_Agent_Fax__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agent_Fax__c</fullName>
    <formula>Broker_Agent_Contact__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker/Agent Fax</label>
    <type>Text</type>
</CustomField>