unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Broker_Agent_Title__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agent_Title__c</fullName>
    <formula>Broker_Agent_Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker/Agent Title</label>
    <type>Text</type>
</CustomField>