unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Broker_Broker_Contact__c.field-meta.xml
<CustomField>
    <fullName>Broker_Broker_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Reflects Broker, Broker contact, and Broker phone number</inlineHelpText>
    <label>Broker/Broker Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>