unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Build_Platform__c.field-meta.xml
<CustomField>
    <fullName>Build_Platform__c</fullName>
    <label>Build Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Able Employee Navigator</fullName>
            </value>
            <value>
                <fullName>AccessAble</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Trustmark</fullName>
            </value>
            <value>
                <fullName>USAble Selerix</fullName>
            </value>
            <value>
                <fullName>Selerix Choice</fullName>
                <isActive>false</isActive>
                <label>Selerix Choice</label>
            </value>
            <value>
                <fullName>USAble</fullName>
                <isActive>false</isActive>
                <label>USAble</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>