unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Built_By_Broker__c.field-meta.xml
<CustomField>
    <fullName>Built_By_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Built By Broker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Agency</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enrollment Implementations</relationshipLabel>
    <relationshipName>Enrollment_Implementations</relationshipName>
    <type>Lookup</type>
</CustomField>