unpackaged/main/default/objects/Enrollment_Implementation__c/fields/BVI_Enrollers__c.field-meta.xml
<CustomField>
    <fullName>BVI_Enrollers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BVI Enrollers</label>
    <type>Checkbox</type>
</CustomField>