unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Cancer_Type__c.field-meta.xml
<CustomField>
    <fullName>Cancer_Type__c</fullName>
    <label>Cancer Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancer Care Elite</fullName>
            </value>
            <value>
                <fullName>Cancer w/ Critical</fullName>
            </value>
            <value>
                <fullName>W2G Cancer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>