unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Carrier_Bills__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Bills__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carrier Bill(s)</label>
    <type>Checkbox</type>
</CustomField>