unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Carrier_Bills_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Bills_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Carrier Bill(s) Received Date</label>
    <type>Date</type>
</CustomField>