unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Carrier_Group_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Group_Numbers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Carrier Group Numbers</label>
    <length>50</length>
    <type>Text</type>
</CustomField>