unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>This field acting as parent of Enrollment workspace</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Enrollment Implementations</relationshipLabel>
    <relationshipName>Enrollment_Implementations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>