unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Case_Builder_QA_Completed__c.field-meta.xml
<CustomField>
    <fullName>Case_Builder_QA_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Builder QA Completed</label>
    <type>Checkbox</type>
</CustomField>