unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Case_Builder_QA_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Builder_QA_Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Builder QA Completion Date</label>
    <type>Date</type>
</CustomField>