unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Case_Information_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Case_Information_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Information Deadline</label>
    <type>Date</type>
</CustomField>