unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Case_Release_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Release_Notification_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Release Notification Date</label>
    <type>Date</type>
</CustomField>