unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Case_Released__c.field-meta.xml
<CustomField>
    <fullName>Case_Released__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Released</label>
    <type>Checkbox</type>
</CustomField>