unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Case_Setup_in_Selerix__c.field-meta.xml
<CustomField>
    <fullName>Case_Setup_in_Selerix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Setup in Selerix</label>
    <type>Checkbox</type>
</CustomField>