unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Case_Setup_in_Selerix_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Setup_in_Selerix_Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Setup in Selerix Completion Date</label>
    <type>Date</type>
</CustomField>