unpackaged/main/default/objects/Enrollment_Implementation__c/fields/CDF_Submission__c.field-meta.xml
<CustomField>
    <fullName>CDF_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CDF Submission</label>
    <type>Checkbox</type>
</CustomField>