unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Census_IncreaseReduction_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Census_IncreaseReduction_Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Census IncreaseReduction Completion Date</label>
    <type>Date</type>
</CustomField>