unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Census_Loaded__c.field-meta.xml
<CustomField>
    <fullName>Census_Loaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Census Loaded</label>
    <type>Checkbox</type>
</CustomField>