unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Census_Loaded_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Census_Loaded_Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Census Loaded Completion Date</label>
    <type>Date</type>
</CustomField>