unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Census_Payroll_Data__c.field-meta.xml
<CustomField>
    <fullName>Census_Payroll_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Census/Payroll Data</label>
    <type>Checkbox</type>
</CustomField>