unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Census_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Census_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Census Received Date</label>
    <type>Date</type>
</CustomField>