unpackaged/main/default/objects/Enrollment_Implementation__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>IF ( ISBLANK(Override_City_State_Zip__c) || ISNULL(Override_City_State_Zip__c),   Case__r.Master_Group__r.BillingCity + &quot;, &quot; + Case__r.Master_Group__r.BillingState + &quot; &quot; +  Case__r.Master_Group__r.BillingPostalCode, Override_City_State_Zip__c)</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>