unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Classes_by_Product__c.field-meta.xml
<CustomField>
    <fullName>Classes_by_Product__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Classes by Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>