unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Collateral_Received__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collateral Received</label>
    <type>Checkbox</type>
</CustomField>