unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Collateral_Requested__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collateral Requested</label>
    <type>Checkbox</type>
</CustomField>