unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Collateral_Requested_from_Other_Carriers__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Requested_from_Other_Carriers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collateral Requested from Other Carriers</label>
    <type>Checkbox</type>
</CustomField>