unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Collateral_Sent_to_Group__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Sent_to_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collateral Sent to Group</label>
    <type>Checkbox</type>
</CustomField>