unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Communication_Plan__c.field-meta.xml
<CustomField>
    <fullName>Communication_Plan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Communication plan of enrollment outlined with group.  Must received copies and dates of communication to EE&#39;s</inlineHelpText>
    <label>Communication Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>