unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Confirm_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Confirm enrollment on enrollment/enroller schedule</inlineHelpText>
    <label>Confirm Enrollment</label>
    <type>Checkbox</type>
</CustomField>