unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Contributions_by_Employer__c.field-meta.xml
<CustomField>
    <fullName>Contributions_by_Employer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contributions by Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>