unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Critical_Type__c.field-meta.xml
<CustomField>
    <fullName>Critical_Type__c</fullName>
    <label>Critical Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical Care</fullName>
            </value>
            <value>
                <fullName>DUO</fullName>
            </value>
            <value>
                <fullName>W2G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>