unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Data_Audit_Complete__c.field-meta.xml
<CustomField>
    <fullName>Data_Audit_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Audit Complete</label>
    <type>Checkbox</type>
</CustomField>