unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Data_Audit_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Audit_Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Audit Completion Date</label>
    <type>Date</type>
</CustomField>