unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Data_Reloaded__c.field-meta.xml
<CustomField>
    <fullName>Data_Reloaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Reloaded</label>
    <type>Checkbox</type>
</CustomField>