unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Data_Reloaded_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Reloaded_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Reloaded Date</label>
    <type>Date</type>
</CustomField>