unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Decision_Maker_Contact__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decision Maker Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enrollment Implementations (Decision Maker Contact)</relationshipLabel>
    <relationshipName>Enrollment_Implementations6</relationshipName>
    <type>Lookup</type>
</CustomField>