unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Decision_Maker_Email__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Email__c</fullName>
    <formula>Decision_Maker_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decision Maker Email</label>
    <type>Text</type>
</CustomField>