unpackaged/main/default/objects/Enrollment_Implementation__c/fields/Decision_Maker_Fax__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Fax__c</fullName>
    <formula>Decision_Maker_Contact__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decision Maker Fax</label>
    <type>Text</type>
</CustomField>